--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         </div>
         <div class="image-wrapper" data-message="happy birthday from all of us!<br>tilday and strekkers didnt respond make fun of them">
             <p class="message"></p>
-            <img class="image-container" src="image_5.jpg" alt="Image 5">
+            <img class="image-container" src="image_5.jpeg" alt="Image 5">
         </div>
     </div>
     <!-- New "Press Me" button added here -->
-    <button class="press-me-button" onclick="alert('You pressed me!')">Press Me</button>
+    <button class="press-me-button" onclick="alert('you're digging in me')">Press Me</button>
     <!-- The original confetti button -->
     <button class="confetti-button" onclick="startConfetti()"></button>
     
