--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
             <p class="message"></p>
             <img class="image-container" src="remix-553a47d0-bc6e-4141-a8f9-84a8738ecd23.png" alt="Image 4">
         </div>
-        <div class="image-wrapper" data-message="happy birthday from all of us!<br>tilday and strekkers didnt respond make fun of them">
-            <p class="message"></p>
+<div class="image-wrapper" data-message="happy birthday from all of us!">
+    <p>"Tilday and Strekkers didn't respond, make fun of them!"</p>
+    <p class="message"></p>
+</div>
             <img class="image-container" src="image_5.jpeg" alt="Image 5">
         </div>
     </div>
