--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             <img class="image-container" src="remix-553a47d0-bc6e-4141-a8f9-84a8738ecd23.png" alt="Image 4">
         </div>
 <div class="image-wrapper" data-message="happy birthday from all of us!">
-    <p>"Tilday and Strekkers didn't respond, make fun of them!"</p>
-    <p class="message"></p>
-            <img class="image-container" src="image_5.jpeg" alt="Image 5">
-        </div>
+    <p class="message">"Tilday and Strekkers didn't respond, make fun of them!"</p> <!-- Corrected to ensure this is inside the .message tag -->
+    <img class="image-container" src="image_5.jpeg" alt="Image 5">
+</div>
+
     </div>
     <!-- The original confetti button -->
     <button class="confetti-button" onclick="startConfetti()"></button>
